Fix z-index title h2 news

--- a/src/css/mobile-style.css
+++ b/src/css/mobile-style.css
@@ -98,6 +98,7 @@
     }
 
     #news-span {
+        z-index: 0;
         position: relative;
       }
       
